Fix extra spacing beneath poster images

--- a/web/styles/main.css
+++ b/web/styles/main.css
@@ -82,6 +82,7 @@ body {
 }
 
 .poster-image img {
+  vertical-align: bottom;
   width: 100%;
 }
 
